# codavatar

./: README.md  pyproject.toml
assignment1/: main.py
assignment2/: main.py
assignment3/: main.py  oop_practice.py
auth_todo/: auth.py  database.py  env-sample  main.py  model.py  schema.py  utils.py
auth_todo/router/: todo.py  user.py
blogapp/: database.py  env-sample  main.py  model.py  schema.py
blogapp/auth/: author.py  hashing.py  token.py
blogapp/router/: author.py  blog.py
bookproject/app/: main.py
todo_do/: crud.py  database.py  env-sample  main.py  model.py  schemas.py  utils.py
